--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a href="Nissan.html" class="btn nav-link"  >+</a>
+                                    <a href="MN01.html" class="btn nav-link"  >+</a>
                                 </div>
                             </div>
                         </div>
@@ -193,22 +193,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.4s">
-                            <div class="portfolio-warp">
-                                <div class="portfolio-img">
-                                    <img src="img/portfolio-4.jpg" alt="Image">
-                                    <div class="portfolio-overlay">
-                                        <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="portfolio-text">
-                                    <h3>Underground Works, PEA Puket</h3>
-                                    <a class="btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">+</a>
-                                </div>
-                            </div>
-                        </div>
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item second wow fadeInUp" data-wow-delay="0.5s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
@@ -221,7 +205,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Protection Wall , TC Phamacheutical</h3>
-                                    <a class="btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="T.C.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -236,8 +220,8 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 69 kv Bldg., MWA (Prachachuen)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Substation 24 kv Bldg., การประปา</h3>
+                                    <a class="btn" href="MEA2.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -252,8 +236,24 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 69 kv Bldg., MEA (Ladkrabung)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Substation 115 kv Bldg., MEA (Ladkrabung)</h3>
+                                    <a class="btn" href="MEA.html" data-lightbox="portfolio">+</a>
+                                </div>
+                            </div>
+                        </div>
+                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                            <div class="portfolio-warp">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio-6.jpg" alt="Image">
+                                    <div class="portfolio-overlay">
+                                        <p>
+                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="portfolio-text">
+                                    <h3>Future Electrical Control</h3>
+                                    <a class="btn" href="Future Electrical.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -269,11 +269,12 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>10th Fl. Car Park Bldg., PKS 2 Hospital</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Petchkasem 2.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
+                        
+                        <!-- <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
                                     <img src="img/portfolio-6.jpg" alt="Image">
@@ -285,10 +286,10 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>The Circle Ratchapruk Renovate Phase 2</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Circle2.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item third wow fadeInUp" data-wow-delay="0.6s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
@@ -301,7 +302,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>The Circle Ratchapruk Renovate Phase 1</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Circle1.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -317,7 +318,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>SIG Combibloc</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="SIG.html" data-lightbox="portfolio">+</a>
                                 </div>
                             </div>
                         </div>
@@ -333,7 +334,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Villa Market, The Circle Ratchapruk</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Circle.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -348,8 +349,8 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Nongkee, Burirum)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Solar Power Plant (Nongkee, Buriram)</h3>
+                                    <a class="btn" href="BCP , Buriram2.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -364,8 +365,8 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Prakonchai, Burirum)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Solar Power Plant (Prakonchai, Buriram)</h3>
+                                    <a class="btn" href="BCP , Buriram.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -381,7 +382,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Solar Power Plant (Nakam, Prachinburi)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="BCP , Prachinburi.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -397,7 +398,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Solar Power Plant (Bang Pa Hun, Ayutthaya)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="BCP , Ayutthaya.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -413,7 +414,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Solar Power Plant (Bamnejnarong, Chaiyapum)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="BCP, Chaiyapum.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -429,7 +430,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Solar Power Plant (Bang Pa-in, Ayutthaya)</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="BCP.html">+</a>
                                 </div>
                             </div>
                         </div>
@@ -445,7 +446,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>ESSILOR Canteen Extension</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="ESSILOR.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -462,7 +463,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Nissan Car Park</h3>
-                                    <a class="btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="Nissan.html">+</a>
                                 </div>
                             </div>
                         </div>
