--- a/public/UN01.html
+++ b/public/UN01.html
@@ -112,7 +112,7 @@
             <div class="page-header">
                 <div class="container">
                     <div class="row">
-                        <div class="col-12">
+                        <div class="col-md-10">
                             <h2>โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)</h2>
                         </div>
                         <!-- <div class="col-12">
